--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-   <head>
+   <head> 
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <title>SuchIsLife</title>
@@ -25,13 +25,13 @@
       </header>
       <div class="floating-prompt-container">
          <div class="floating-prompt">
-           <h2>Sign In</h2>
+           <h2>Authorization</h2>
            <form id="signin-form">
-             <label for="email">Email:</label>
+             <label for="email">Email</label>
              <input type="email" id="email" name="email" required>
-             <label for="password">Password:</label>
+             <label for="password">Password</label>
              <input type="password" id="password" name="password" required>
-             <button type="submit" id="signin-button">Sign In</button>
+             <button type="submit" id="signin-button">Connect</button>
            </form>
          </div>
        </div>
